// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSessionActivity pageActivityHandler componentDidMount should trigger sessionHeartbeat 1`] = `
<PageVisibility
  onChange={[Function]}
>
  <div
    onClick={[Function]}
  >
    <p>
      meow meow
    </p>
  </div>
</PageVisibility>
`;

exports[`UserSessionActivity renders consistently 1`] = `
<PageVisibility
  onChange={[Function]}
>
  <div
    onClick={[Function]}
  >
    <p>
      Ok!
    </p>
  </div>
</PageVisibility>
`;

exports[`UserSessionActivity when the user is logged out renders an AlertModal 1`] = `
<UserSessionActivity
  heartbeatResponse={[MockFunction]}
  isLoggedIn={false}
  oauthBaseUrl="https://login.service.bcdev"
>
  <PageVisibility
    onChange={[Function]}
  >
    <div
      onClick={[Function]}
    >
      <AlertModal
        actionText="Ok"
        body="For security reasons you have been automatically logged out.
        Please log in again to access Store Design."
        primaryAction={[Function]}
        title="You have been logged out."
      >
        <Modal
          isTransparent={false}
          title="You have been logged out."
        >
          <styled.div
            onClick={[Function]}
            theme={
              Object {
                "layers": Object {
                  "higher": 100,
                },
              }
            }
          >
            <div
              className="sc-dxgOiQ cbzzfy"
              onClick={[Function]}
            >
              <styled.div
                isTransparent={false}
                theme={
                  Object {
                    "layers": Object {
                      "higher": 100,
                    },
                  }
                }
              >
                <div
                  className="sc-ckVGcZ dUzOGO"
                />
              </styled.div>
              <styled.div
                onClick={[Function]}
                theme={
                  Object {
                    "colors": Object {
                      "empty": "#FFFFFF",
                      "guideText": "#ABB1BE",
                    },
                    "elevation": Object {
                      "floating": "0 2px 12px rgba(48, 53, 64, 0.2)",
                    },
                    "layers": Object {
                      "highest": 500,
                    },
                  }
                }
              >
                <div
                  className="sc-kEYyzF eBiHem"
                  onClick={[Function]}
                >
                  <styled.div>
                    <div
                      className="sc-eNQAEJ hHINNG"
                    >
                      <styled.h3
                        theme={
                          Object {
                            "colors": Object {
                              "primaryText": "#303540",
                            },
                            "typography": Object {
                              "fontSize": Object {
                                "larger": "24px",
                              },
                              "fontWeight": Object {
                                "normal": 600,
                              },
                            },
                          }
                        }
                      >
                        <h3
                          className="sc-hMqMXs hVSXrW"
                        >
                          You have been logged out.
                        </h3>
                      </styled.h3>
                    </div>
                  </styled.div>
                  <styled.div
                    theme={
                      Object {
                        "colors": Object {
                          "primaryText": "#AAAAAA",
                        },
                        "typography": Object {
                          "fontSize": Object {
                            "small": "16px",
                          },
                          "fontWeight": Object {
                            "normal": 400,
                          },
                        },
                      }
                    }
                  >
                    <div
                      className="sc-jKJlTe fGpUUw"
                    >
                      <styled.div>
                        <div
                          className="sc-eHgmQL cbtlgd"
                        >
                          <styled.div>
                            <div
                              className="sc-kkGfuU kUNnRZ"
                            >
                              For security reasons you have been automatically logged out.
        Please log in again to access Store Design.
                            </div>
                          </styled.div>
                          <styled.div>
                            <div
                              className="sc-cvbbAY dhCsth"
                            >
                              <Button
                                actionType="primary"
                                buttonStyle="contained"
                                onClick={[Function]}
                                testId="ok"
                                type="button"
                              >
                                <styled.button
                                  actionType="primary"
                                  buttonStyle="contained"
                                  buttonVariation="textOnly"
                                  data-test-id="ok"
                                  onClick={[Function]}
                                  theme={
                                    Object {
                                      "colors": Object {
                                        "destructiveEnabled": "#DB3643",
                                        "destructiveFocused": "#FEDBDE",
                                        "destructiveHover": "#CC1F1F",
                                        "disabled": "#D9DCE9",
                                        "empty": "#FFFFFF",
                                        "primaryEnabled": "#3C64F4",
                                        "primaryFocused": "#DBE3FE",
                                        "primaryHover": "#2852EB",
                                        "transparentDestructiveHover": "#FFF0F1",
                                        "transparentDestructivePressed": "#FEDBDE",
                                        "transparentPrimaryHover": "#F0F3FF",
                                        "transparentPrimaryPressed": "#DBE3FE",
                                      },
                                      "typography": Object {
                                        "fontFamily": Object {
                                          "sans": "\\"Source Sans Pro\\", \\"Helvetica Neue\\", Arial, sans-serif",
                                        },
                                        "fontWeight": Object {
                                          "bold": 600,
                                          "normal": 400,
                                        },
                                      },
                                    }
                                  }
                                  type="button"
                                >
                                  <button
                                    className="sc-ifAKCX MTzPR"
                                    data-test-id="ok"
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <styled.div>
                                      <div
                                        className="sc-bZQynM efjXoN"
                                      >
                                        Ok
                                      </div>
                                    </styled.div>
                                  </button>
                                </styled.button>
                              </Button>
                            </div>
                          </styled.div>
                        </div>
                      </styled.div>
                    </div>
                  </styled.div>
                </div>
              </styled.div>
            </div>
          </styled.div>
        </Modal>
      </AlertModal>
      <p>
        meow meow
      </p>
    </div>
  </PageVisibility>
</UserSessionActivity>
`;
